[workspace]
resolver = "2"
members = []
exclude = []

[package]
name = "openapi-sync"
version = "0.1.0"
edition = "2024"
description = "Rust implementation of a file synchronization tool for company SDK"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Linyuqiz/openapi-sync"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
derive_more = { version = "1", features = ["full"] }
openapi-rs = "0.1.3"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
dotenvy = "0.15"
bytes = "1"
